--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,101 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="css/simstyle.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="js/draganddrop.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'></link>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
-<body>
-		<!-- Your code goes here-->
+<body  style="width:95em">
+	<div class="exp" id="exp">
+		<div id="exph">
+			<h1 id="expm">Measurement of Numerical Aperture</h1>
+		   
+			</div>
+		<img class="image" src="images/table.jpg"></img>
+	
+		<!-- Division for apparatus -->
+		<div class="source" id="s"><p style="font-size:25px;">APPARATUS:&emsp;</p>
+			<div class="table" id="14"><img style="padding-top:5px;" id="4"  draggable="true" ondragstart="dragStart(event)" src="images/emitter.png" alt="emitter" height=70 width=55></img><br/>Emitter</div>
+			<div class="table" id="11"><img style="padding-top:5px;" id="1" draggable="true" ondragstart="return dragStart(event)" src="images/stand.png" alt="left stand" height=70 width=35></img></br>Left stand</div>
+			<div class="table" id="10"><img style="padding-top:5px;" id="0" draggable="true" ondragstart="return dragStart(event)" src="images/screen.png" alt="screen" height=70 width=65></img>Screen</div>
+			<div class="table" id="13"><img style="padding-top:5px;" id="3" draggable="true" ondragstart="return dragStart(event)" src="images/stand.png" alt="right stand" height=70 width=35></img></br>Right stand</div>
+			<div class="table" id="12" style="cursor:not-allowed;" ><img  id="2" draggable="false" ondragstart="return dragStart(event)" alt="fiber" src="images/fiber.png" height=20px width=95px></img>Fiber</div>
+		</div><br/>
+		
+		<!-- Division for buttons-->
+		
+		<div class="top">
+			<form action="exp.html" method="post" style="width:100%;text-align:right">
+				<div class="button"><input type="submit" class="b1" id="st" style="cursor:not-allowed;" value="START" disabled></input></div>
+				<div class="button"><input class="b2" type="button" onclick="location.reload()" value="RESET"></input></div>
+			</form>
+		</div>
+		
+		<!-- Division for elements on table -->
+		<div class="dest">
+			<div class="table" style="text-align:right;" id="5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+			<div class="table" style="text-align:right;" id="6" ondrop="drop(event)" ondragover="allowDrop(event)">&emsp;</div>
+			<div class="table" id="7" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+			<div class="table" id="8" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+			<div class="table" id="9" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+		</div><br/><br/>
+	</div>
+	<div class="instruct">
+			<a id="myBtn" href="#">INSTRUCTIONS</a>
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+						<div class="modal-header">
+							<span class="close">&times;</span>
+							<h2>Instructions</h2>
+						</div>
+						<div class="modal-body">
+							<center><img src="images/Setup.PNG" width=430 height=130></img></center>
+							<br/><center>Arrange the apparatus as shown above.</center>
+							<ol type='1' style="font-size:20px;">
+								<li>Only drag and drop objects displaying this(<img src="images/move.png" width=20 height=20></img>) cursor on the screen.</li>
+								<li>Do not drag the object displaying this cursor(<img src="images/notallowed.png" width=15 height=15></img>).It will be unlocked later.</li>
+								<li>To reset screen use <img src="images/reset.png" width=53 height=20></img> button.</li>
+								<li>After completely arranging the apparatus click <img src="images/start.PNG" width=53 height=20></img> button to start the experiment.</li>
+							</ol>
+							<label style="color:red;font-weight: bold;">Note: </label><b>Do not start before properly arranging the apparatus onto the table.</b>
+						</div>
+						<div class="modal-footer">
+							<br/>
+						</div>
+				</div>
+	</div>
+	</div>
 
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
+	<script>
+		var modal = document.getElementById("myModal");
+
+		// Get the button that opens the modal
+		var btn = document.getElementById("myBtn");
+
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName("close")[0];
+
+		// When the user clicks the button, open the modal 
+		btn.onclick = function() {
+			modal.style.display = "block";
+		}
+
+		// When the user clicks on <span> (x), close the modal
+		span.onclick = function() {
+			modal.style.display = "none";
+		}
+
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function(event) {
+			if (event.target == modal) {
+					modal.style.display = "none";
+			}
+		}
+	</script>
+	<footer class="main-footer">
+		<div align="center" style="font-size: 16px;color:white;margin:auto">© 2023 Virtual Labs, IIT Roorkee<!-- Institute Name --> </div>
+	  </footer>
 </body>
 </html>
